[metadata]
name = edt
url = https://github.com/seung-lab/euclidean-distance-transform-3d/
summary = Multi-Label Anisotropic Euclidean Distance Transform 3D
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/euclidean-distance-transform-3d/
license_file = LICENSE
licenses = LGPL-3.0-or-later
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = edt
