[metadata]
name = edt
url = https://github.com/seung-lab/euclidean-distance-transform-3d/
summary = Multi-Label Anisotropic Euclidean Distance Transform 3D
description-file =
    README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/euclidean-distance-transform-3d/
license-file=
    LICENSE
classifier =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = edt

[wheel]
universal = 1