[metadata]
name = edt
url = https://github.com/seung-lab/euclidean-distance-transform-3d/
summary = Multi-Label Anisotropic Euclidean Distance Transform 3D
description_content_type = text/markdown
description_file = README.md
author = William Silversmith
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/euclidean-distance-transform-3d/
license_file = LICENSE
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)  
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: MacOS
    Topic :: Utilities

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = edt
